rename, add dates

--- a/_publications/2019.md
+++ b/_publications/2019.md
@@ -2,8 +2,8 @@
 title: "Differential efficacy of genetically swapping gal4"
 author: ["Ying-Jun Chen", "Hao-Hsin Chang", "Shih-Han Lin", "Tzi-Yang Lin", "Ting-Han Wu", "Hsin-Ju Lin", "Nan-Fu Liou", "Chi-Jen Yang", "Yuh-Tarng Chen", "Kai Hsiang Chang", "Cen-You Li", "Ya-Hui Chou"]
 category: manuscripts
-permalink: /publication/2019_neurogenetics
-date: 2019
+permalink: /publication/2019
+date: 2019-04-02
 venue: 'Journal of Neurogenetics'
 doi: 'https://doi.org/10.1080/01677063.2018.1564289'
 ---
