--- a/_publications/2022a.md
+++ b/_publications/2022a.md
@@ -2,8 +2,8 @@
 title: "Safe Active Learning for Multi-Output Gaussian Processes"
 author: ["Cen-You Li", "Barbara Rakitsch", "Christoph Zimmer"]
 category: conferences
-permalink: /publication/2022_aistats
-date: 2022
+permalink: /publication/2022a
+date: 2022-03-28
 venue: 'International Conference on Artificial Intelligence and Statistics'
 venue_highlight: 'AISTATS'
 html: 'https://proceedings.mlr.press/v151/li22d.html'
