--- a/_publications/2024a.md
+++ b/_publications/2024a.md
@@ -2,8 +2,8 @@
 title: "Amortized Active Learning for Nonparametric Functions"
 author: ["Cen-You Li", "Marc Toussaint", "Barbara Rakitsch*", "Christoph Zimmer*"]
 category: conferences
-permalink: /publication/2024_ial
-date: 2024
+permalink: /publication/2024a
+date: 2024-09-09
 venue: 'ECML-PKDD Workshop: Interactive Adaptive Learning'
 arxiv: 'https://arxiv.org/abs/2407.17992'
 ---
