--- a/_publications/2024b.md
+++ b/_publications/2024b.md
@@ -2,8 +2,8 @@
 title: "Global Safe Sequential Learning via Efficient Knowledge Transfer"
 author: ["Cen-You Li", "Olaf Duennbier", "Marc Toussaint", "Barbara Rakitsch*", "Christoph Zimmer*"]
 category: manuscripts
-permalink: /publication/2022_under_review
-date: 2024
+permalink: /publication/2024b
+date: 2024-09-21
 venue: 'preprint'
 arxiv: 'https://arxiv.org/abs/2402.14402'
 code: 'https://github.com/boschresearch/TransferSafeSequentialLearning'
