try separating authors, highlight myself

--- a/_publications/2019.md
+++ b/_publications/2019.md
@@ -1,6 +1,6 @@
 ---
 title: "Differential efficacy of genetically swapping gal4"
-author: ["Ying-Jun Chen", "Hao-Hsin Chang", "Shih-Han Lin", "Tzi-Yang Lin", "Ting-Han Wu", "Hsin-Ju Lin", "Nan-Fu Liou", "Chi-Jen Yang", "Yuh-Tarng Chen", "Kai Hsiang Chang", "Cen-You Li", "Ya-Hui Chou"]
+author: ["Ying-Jun Chen", "Hao-Hsin Chang", "Shih-Han Lin", "Tzi-Yang Lin", "Ting-Han Wu", "Hsin-Ju Lin", "Nan-Fu Liou", "Chi-Jen Yang", "Yuh-Tarng Chen", "Kai Hsiang Chang", "__self__", "Ya-Hui Chou"]
 category: manuscripts
 permalink: /publication/2019
 date: 2019-04-02
