--- a/_publications/2022a.md
+++ b/_publications/2022a.md
@@ -1,6 +1,6 @@
 ---
 title: "Safe Active Learning for Multi-Output Gaussian Processes"
-author: ["Cen-You Li", "Barbara Rakitsch", "Christoph Zimmer"]
+author: ["__self__", "Barbara Rakitsch", "Christoph Zimmer"]
 category: conferences
 permalink: /publication/2022a
 date: 2022-03-28
