--- a/_publications/2024a.md
+++ b/_publications/2024a.md
@@ -1,6 +1,6 @@
 ---
 title: "Amortized Active Learning for Nonparametric Functions"
-author: ["Cen-You Li", "Marc Toussaint", "Barbara Rakitsch*", "Christoph Zimmer*"]
+author: ["__self__", "Marc Toussaint", "Barbara Rakitsch*", "Christoph Zimmer*"]
 category: conferences
 permalink: /publication/2024a
 date: 2024-09-09
