--- a/_publications/2022b.md
+++ b/_publications/2022b.md
@@ -1,6 +1,6 @@
 ---
 title: "Learning how to safely explore dynamic systems"
-author: ["Christoph Zimmer", "Cen-You Li", "Mark Schillinger", "Mona Meister", "Barbara Rakitsch", "Duy Nguyen-Tuong"]
+author: ["Christoph Zimmer", "__self__", "Mark Schillinger", "Mona Meister", "Barbara Rakitsch", "Duy Nguyen-Tuong"]
 category: conferences
 permalink: /publication/2022b
 date: 2022-07-22
