try abstract toggle

--- a/_publications/2022a.md
+++ b/_publications/2022a.md
@@ -4,11 +4,13 @@ author: ["__self__", "Barbara Rakitsch", "Christoph Zimmer"]
 category: conferences
 permalink: /publication/2022a
 date: 2022-03-28
-venue: 'International Conference on Artificial Intelligence and Statistics'
-venue_highlight: 'AISTATS'
-html: 'https://proceedings.mlr.press/v151/li22d.html'
-arxiv: 'https://arxiv.org/abs/2203.14849'
-code: 'https://github.com/boschresearch/SALMOGP'
+venue: "International Conference on Artificial Intelligence and Statistics"
+venue_highlight: "AISTATS"
+html: "https://proceedings.mlr.press/v151/li22d.html"
+arxiv: "https://arxiv.org/abs/2203.14849"
+code: "https://github.com/boschresearch/SALMOGP"
+abstract: "Multi-output regression problems are commonly encountered in science and engineering. In particular, multi-output Gaussian processes have been emerged as a promising tool for modeling these complex systems since they can exploit the inherent correlations and provide reliable uncertainty estimates. In many applications, however, acquiring the data is expensive and safety concerns might arise (e.g. robotics, engineering). We propose a safe active learning approach for multi-output Gaussian process regression. This approach queries the most informative data or output taking the relatedness between the regressors and safety constraints into account. We prove the effectiveness of our approach by providing theoretical analysis and by demonstrating empirical results on simulated datasets and on a real-world engineering dataset. On all datasets, our approach shows improved convergence compared to its competitors."
+
 ---
 
 
