--- a/_publications/2019.md
+++ b/_publications/2019.md
@@ -4,8 +4,9 @@ author: ["Ying-Jun Chen", "Hao-Hsin Chang", "Shih-Han Lin", "Tzi-Yang Lin", "Tin
 category: manuscripts
 permalink: /publication/2019
 date: 2019-04-02
-venue: 'Journal of Neurogenetics'
-doi: 'https://doi.org/10.1080/01677063.2018.1564289'
+venue: "Journal of Neurogenetics"
+doi: "https://doi.org/10.1080/01677063.2018.1564289"
+abstract: "Several large or mid-scale collections of Drosophila enhancer traps have been recently created to allow for genetic swapping of GAL4 coding sequences to versatile transcription activators or suppressors such as LexA, QF, split-GAL4 (GAL4-AD and GAL4-DBD), GAL80 and QS. Yet a systematic analysis of the feasibility and reproducibility of these tools is lacking. Here we focused on InSITE GAL4 drivers that specifically label different subpopulations of olfactory neurons, particularly local interneurons (LNs), and genetically swapped the GAL4 domain for LexA, GAL80 or QF at the same locus. We found that the major utility-limiting factor for these genetic swaps is that many do not fully reproduce the original GAL4 expression patterns. Different donors exhibit distinct efficacies for reproducing original GAL4 expression patterns. The successfully swapped lines reported here will serve as valuable reagents and expand the genetic toolkits of Drosophila olfactory circuit research."
 ---
 
 
