--- a/_publications/2022b.md
+++ b/_publications/2022b.md
@@ -4,8 +4,9 @@ author: ["Christoph Zimmer", "__self__", "Mark Schillinger", "Mona Meister", "Ba
 category: conferences
 permalink: /publication/2022b
 date: 2022-07-22
-venue: 'ICML Workshop: Adaptive Experimental Design and Active Learning in the Real World'
-pdf: 'https://realworldml.github.io/files/cr/paper17.pdf'
+venue: "ICML Workshop: Adaptive Experimental Design and Active Learning in the Real World"
+pdf: "https://realworldml.github.io/files/cr/paper17.pdf"
+abstract: "Computational modeling is central in gaining systems’ understanding in a broad range of domains. Data based modeling has become an essential part of these efforts. While in some domains labelled data is abundant, e.g., search engines queries, in other domains labeling is time consuming, e.g., medical image analysis, comes at high financial cost and sometimes is even safety critical, e.g., experiments in chemical reactors or test benches. Therefore, approaches for automatic data generation under safety constraints are a key enabler for automatic data generation in those systems. We present approaches for safe learning and combine it with dynamic systems, systems with multiple outputs as well as real world industrial applications."
 ---
 
 
