--- a/_publications/2024a.md
+++ b/_publications/2024a.md
@@ -4,8 +4,10 @@ author: ["__self__", "Marc Toussaint", "Barbara Rakitsch*", "Christoph Zimmer*"]
 category: conferences
 permalink: /publication/2024a
 date: 2024-09-09
-venue: 'ECML-PKDD Workshop: Interactive Adaptive Learning'
-arxiv: 'https://arxiv.org/abs/2407.17992'
+venue: "ECML-PKDD Workshop: Interactive Adaptive Learning"
+html: "https://ceur-ws.org/Vol-3770"
+arxiv: "https://arxiv.org/abs/2407.17992"
+abstract: "Active learning (AL) is a sequential learning scheme aiming to select the most informative data. AL reduces data consumption and avoids the cost of labeling large amounts of data. However, AL trains the model and solves an acquisition optimization for each selection. It becomes expensive when the model training or acquisition optimization is challenging. In this paper, we focus on active nonparametric function learning, where the gold standard Gaussian process (GP) approaches suffer from cubic time complexity. We propose an amortized AL method, where new data are suggested by a neural network which is trained up-front without any real data (Figure 1). Our method avoids repeated model training and requires no acquisition optimization during the AL deployment. We (i) utilize GPs as function priors to construct an AL simulator, (ii) train an AL policy that can zero-shot generalize from simulation to real learning problems of nonparametric functions and (iii) achieve real-time data selection and comparable learning performances to time-consuming baseline methods."
 ---
 
 
