--- a/_publications/2024b.md
+++ b/_publications/2024b.md
@@ -4,9 +4,9 @@ author: ["__self__", "Olaf Duennbier", "Marc Toussaint", "Barbara Rakitsch*", "C
 category: manuscripts
 permalink: /publication/2024b
 date: 2024-09-01
-venue: 'preprint'
-arxiv: 'https://arxiv.org/abs/2402.14402'
-code: 'https://github.com/boschresearch/TransferSafeSequentialLearning'
+venue: "preprint"
+arxiv: "https://arxiv.org/abs/2402.14402"
+code: "https://github.com/boschresearch/TransferSafeSequentialLearning"
 ---
 
 
